// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as a custom Link component 1`] = `
<a
  class="ds-c-button"
  href="#"
  to="anywhere"
>
  Foo
</a>
`;

exports[`Button renders as an anchor with custom prop 1`] = `
<a
  class="ds-c-button"
  href="/example"
  target="_blank"
>
  Foo
</a>
`;

exports[`Button renders as button 1`] = `
<button
  class="ds-c-button"
  type="button"
>
  Foo
</button>
`;

exports[`Button renders disabled button 1`] = `
<button
  class="ds-c-button"
  disabled=""
  type="button"
>
  Foo
</button>
`;

exports[`Button renders disabled link correctly 1`] = `
<a
  class="ds-c-button ds-c-button--disabled"
  href="javascript:void(0)"
>
  Link button
</a>
`;
